--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,13 +2,25 @@ doctype html
 html
   head
     title= title
+    // Load CSS stylesheet
     link(rel='stylesheet', href='/stylesheets/style.css')
+
     // Load socket.io
     script(src='/socket.io/socket.io.js')
+
     // Load jQuery
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+
     // Load canvasJS
     script(src='/javascripts/jquery.canvasjs.min.js')
+
+    // Load global javascript
+    // script(src='javascripts/global.js')
+    
     block head
+    
+    // Load local javascript
+    script(src='/javascripts/'+ page + '.js')
+
   body
     block content
