--- a/views/advanced.pug
+++ b/views/advanced.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block head
+  // Load PubNub
   script(src='https://cdn.pubnub.com/sdk/javascript/pubnub.4.17.0.js')
-  script(src='/javascripts/advanced.js')
 
 block content
   h1= title
