--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,56 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0em 1em;
+  font: 1em "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
 
+.chartHolder {
+  max-height: 80%;
+  margin: auto;
+}
+
 .chart {
-  width: 24%;
-  height: 300px;
   display: inline-block;
+  width: 24%;
+  min-width: 3em;
+}
+
+.banner {
+  width: 100%;
+  min-height: 5em;
+  margin: auto;
+}
+
+.bannerBox {
+  display: inline-block;
+  min-width: 5em;
+  max-width: 50%;
+}
+
+#barChart1{
+  width: 100%;
+}
+
+button {
+    width: auto;
+    min-width: 10em;
+    margin: 0.2em;
+    padding: 0.5em 1em;
+    border-radius: 1em;
+    font-weight: bold;
+    background-color: #90c2e7;
+    border-color: #315b79;
+}
+
+#pythonMessage {
+    height: 1.5em;
+}
+
+img#lightbulb{
+  padding-right: 2em;
+  height: auto;
+  max-width: 5em;
 }
