--- a/views/index.pug
+++ b/views/index.pug
@@ -10,8 +10,10 @@ block content
             a(href='/advanced')
                 button.btn Advanced view
             br
-            button.btn#getData Get sensor data
-            #pythonMessage
+            button.btn#toggleRead Toggle Readings
+    //- .statsHolder
+    //-     .stat Power: 
+    //-         #powerHolder
     .chartHolder
-        .chart#barChart1
+        .chart#powerChart
     //- .chart#barChart2
