--- a/views/advanced.pug
+++ b/views/advanced.pug
@@ -11,13 +11,17 @@ block content
                 button.btn Basic view
             br
             button.btn#toggleRead Toggle Readings
+    .statsHolder
+        .stat Power:    
+            #power
+        .stat Voltage:    
+            #voltage
+        .stat Current:    
+            #current
+        .stat Total Energy:    
+            #energy
     .chartHolder
         .chart#chartContainer1
         .chart#chartContainer2
         .chart#chartContainer3
         .chart#chartContainer4
-    .statsHolder
-        p.stat#power
-        p.stat#voltage
-        p.stat#current
-        p.stat#energy
