--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,18 @@
 body {
     padding: 0em 1em;
     font: 1em "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin: auto;
+    background-color: #8c8c8c;
 }
 
 a {
     color: #00B7FF;
+}
+
+.tab {
+    display: none;
+    min-height: 5em;
+    margin: auto;
 }
 
 .chartHolder {
@@ -18,10 +26,14 @@ a {
     margin: auto;
 }
 
-.chart {
+.chartAdv{
     display: inline-block;
     width: 24%;
     min-width: 3em;
+}
+
+.chartBasic {
+    width: 100%;
 }
 
 .stat {
@@ -33,9 +45,12 @@ a {
 }
 
 .banner {
-    width: 100%;
+    /* min-width: 80%; */
     min-height: 5em;
-    margin: auto;
+    margin-left: 10em;
+    margin-right: 10em;
+    padding: 2em 10em;
+    background-color: white;
 }
 
 .bannerBox {
@@ -43,10 +58,6 @@ a {
     min-width: 5em;
     max-width: 75%;
     vertical-align: top;
-}
-
-#powerChart {
-    width: 100%;
 }
 
 button {
