--- a/views/advanced.pug
+++ b/views/advanced.pug
@@ -11,15 +11,15 @@ block content
                 button.btn Basic view
             br
             button.btn#toggleRead Toggle Readings
-    .statsHolder
-        .stat Power:    
-            #power
-        .stat Voltage:    
-            #voltage
-        .stat Current:    
-            #current
-        .stat Total Energy:    
-            #energy
+    //- .statsHolder
+    //-     .stat Power:    
+    //-         #power
+    //-     .stat Voltage:    
+    //-         #voltage
+    //-     .stat Current:    
+    //-         #current
+    //-     .stat Total Energy:    
+    //-         #energy
     .chartHolder
         .chart#chartContainer1
         .chart#chartContainer2
