Added support for stats from different inputs

--- a/views/combined.pug
+++ b/views/combined.pug
@@ -8,19 +8,31 @@ block banner
             //- p Welcome to #{title}
             p This website is for the energy demonstration system running on a Raspberry Pi.
             // Button to change to basic view
-            button#basic Basic view
+            button.nav#basic Basic view
             
             // Button to change to advanced view
-            button#advanced Advanced view
+            button.nav#advanced Advanced view
+
             // Button to toggle readings
             button#toggleRead Toggle Readings    
 block content
     .tab#basic
-        .chartHolder#basic
-            .chartBasic#chartContainerPower
+        .generator#bike
+            .chartHolder#basic
+                .chartBasic#chartContainerPower
+        .generator#handcrank
+            .chartHolder#basic
+                .chartBasic#chartContainerPower
     .tab#advanced
-        .chartHolder#advanced
-            .chartAdv#chartContainer1
-            .chartAdv#chartContainer2
-            .chartAdv#chartContainer3
-            .chartAdv#chartContainer4
+        .generator#bike
+            .chartHolder#advanced
+                .chartAdv#chartContainer1
+                .chartAdv#chartContainer2
+                .chartAdv#chartContainer3
+                .chartAdv#chartContainer4        
+        .generator#handcrank
+            .chartHolder#advanced
+                .chartAdv#chartContainer1
+                .chartAdv#chartContainer2
+                .chartAdv#chartContainer3
+                .chartAdv#chartContainer4
