--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,10 @@
 body {
     padding: 0em 1em;
     font: 1em "Lucida Grande", Helvetica, Arial, sans-serif;
-    margin: auto;
-    background-color: #8c8c8c;
 }
 
 a {
     color: #00B7FF;
-}
-
-.tab {
-    display: none;
-    min-height: 5em;
-    margin: auto;
-}
-
-.generator {
-    min-height: 25%;
 }
 
 .chartHolder {
@@ -25,36 +13,24 @@ a {
 }
 
 .statsHolder {
-    min-height: 1.5em;
     max-height: 80%;
     margin: auto;
 }
 
-.chartAdv{
+.chart {
     display: inline-block;
     width: 24%;
     min-width: 3em;
 }
 
-.chartBasic {
-    width: 100%;
-}
-
-.stat {
+.stats {
     display: inline-block;
-    width: 24%;
-    max-width: 24%;
-    min-width: 3em;
-    margin: 0 auto;
 }
 
 .banner {
-    /* min-width: 80%; */
+    width: 100%;
     min-height: 5em;
-    margin-left: 10em;
-    margin-right: 10em;
-    padding: 2em 10em;
-    background-color: white;
+    margin: auto;
 }
 
 .bannerBox {
@@ -62,6 +38,10 @@ a {
     min-width: 5em;
     max-width: 75%;
     vertical-align: top;
+}
+
+#powerChart {
+    width: 100%;
 }
 
 button {
