--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,13 +15,11 @@ a {
     margin: auto;
 }
 
-.generator {
-    min-height: 25%;
-}
-
 .chartHolder {
     max-height: 80%;
+    width: 100%;
     margin: auto;
+    min-height: 400px;
 }
 
 .statsHolder {
@@ -37,7 +35,10 @@ a {
 }
 
 .chartBasic {
-    width: 100%;
+    /* float: left;
+    clear: both; */
+    height: 400px;
+    min-width: 80%;
 }
 
 .stat {
