--- a/views/combined.pug
+++ b/views/combined.pug
@@ -17,22 +17,17 @@ block banner
             button#toggleRead Toggle Readings    
 block content
     .tab#basic
-        .generator#bike
             .chartHolder#basic
-                .chartBasic#chartContainerPower
-        .generator#handcrank
-            .chartHolder#basic
-                .chartBasic#chartContainerPower
+                .chartBasic#chartContainerPower1
+                .chartBasic#chartContainerPower2
     .tab#advanced
-        .generator#bike
             .chartHolder#advanced
                 .chartAdv#chartContainer1
                 .chartAdv#chartContainer2
                 .chartAdv#chartContainer3
                 .chartAdv#chartContainer4        
-        .generator#handcrank
             .chartHolder#advanced
-                .chartAdv#chartContainer1
-                .chartAdv#chartContainer2
-                .chartAdv#chartContainer3
-                .chartAdv#chartContainer4
+                .chartAdv#chartContainer5
+                .chartAdv#chartContainer6
+                .chartAdv#chartContainer7
+                .chartAdv#chartContainer8
