Started settings page and temp sensor code

--- a/views/combined.pug
+++ b/views/combined.pug
@@ -15,6 +15,9 @@ block banner
 
             // Button to toggle readings
             button#toggleRead Toggle Readings    
+
+            a(href='/settings')
+                button#settings Settings
 block content
     .tab#basic
             .chartHolder#basic
