--- a/views/settings.pug
+++ b/views/settings.pug
@@ -16,5 +16,8 @@ block banner
 
             // Button to toggle readings
             button#toggleRead Toggle Readings 
+            
+            a(href='/logout')
+                button#logout Logout
 
 block content
