Added font awesome icons

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,9 @@ html
         // Load local javascript
         script(src='/javascripts/'+ page + '.js')
 
+        // Load Font Awesome script for icons
+        script(src='/javascripts/fontawesome-all.js')        
+
         block head
 
     body
