Fixed temp display

--- a/views/index.pug
+++ b/views/index.pug
@@ -34,11 +34,11 @@ block content
             h2 Temperatures
             .temp-row
                 .column
-                    h3 Amount of Water:
+                    h3 Water:
                     h3 Target:  
                     h3 Ambient:
                     h3 Kettle:
-                    h3 Estimated time
+                    h3 Estimated times
                     h3 Bike:
                     h3 Handcrank:
                 .column
