Got INA sensors working and time to boil

--- a/views/index.pug
+++ b/views/index.pug
@@ -38,7 +38,7 @@ block content
                     h3 Target:  
                     h3 Ambient:
                     h3 Kettle:
-                    h3 Estimated times
+                    h2 Time to boil
                     h3 Bike:
                     h3 Handcrank:
                 .column
@@ -54,23 +54,13 @@ block content
                     h3
                         span#kettle
                         span &degC         
-                    br
+                    h2
+                        br
                     h3
                         span#est-time-bike
                     h3
                         span#est-time-handcrank
-
-            //- console.log("===================================================");
-            //- console.log("Probes: ");
-            //- console.log("Ambient = " + probe_ambient);
-            //- console.log("Kettle = " + probe_kettle);
-            //- console.log("Mass of Water: " + mass + " kg");
-            //- console.log("Target Temperature: " + TARGET_TEMP + " degrees C");            
-            //- console.log("Ambient Temperature: " + temp_ambient + " degrees C");
-            //- console.log("Kettle Temperature: " + temp_kettle + " degrees C");                
-            //- console.log("Power Input: " + power + " Watts");
-            //- console.log("Estimated time is: " + time + " seconds, " + timeStr);
-            //- console.log("===================================================");                     
+                   
         .graphs
             .tab#basic
                     .chartHolder#basic
